--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
   </head>
   <body>
     <h1>Coming Soon</h1>
+    <a href="https://github.com/simple-donut/simple-donut.github.io">https://github.com/simple-donut/simple-donut.github.io</a>
   </body>
 </html>
