Changed the title to let people know they can contribute

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Simple Donut</title>
   </head>
   <body>
-    <h1>Coming Soon</h1>
+    <h1>Edit this page at:</h1>
     <a href="https://github.com/simple-donut/simple-donut.github.io">https://github.com/simple-donut/simple-donut.github.io</a>
   </body>
 </html>
