Apply suggestions from code review

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <body>
     <header>
       <h1>What is Simple Donut?</h1>
-      <p>Simple Donut is a percentage chart that can be toggled from pie to donut.
+      <p>
+        Simple Donut is a percentage chart that can be toggled from pie to donut.
         This fun chart has source code written in multiple frameworks for your reference.
       </p>
     </header>
